--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -24,11 +24,10 @@ header {
       list-style: none;
       a {
         font-size: 1.2rem;
-        color: rgb(246, 107, 107);
+        color:black;
         margin-left: 40px;
 
         &.active {
-          background-color: rgba(255, 154, 154, 0.159);
           padding: 5px 10px;
           border-radius: 10px;
         }
